# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import valvesRouter from "./valves";
 import pipesRouter from "./pipes";
+import pipelinesRouter from "./pipelines";
 import sourcesRouter from "./sources";
 import importExportRouter from "./import-export";
 import telemetryRouter from "./telemetry";
@@ -12,6 +13,7 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(valvesRouter);
 router.use(pipesRouter);
+router.use(pipelinesRouter);
 router.use(sourcesRouter);
 router.use(importExportRouter);
 router.use(telemetryRouter);
